


-------------------------------------------------------------------
3.40.1:
-Fix for edge-case auto-install script error
-Tighter security on any generated .htaccess file permissions
-Auto-install script now supports setting up: htaccess / mod_rewrite / SSL (secure HTTPS web addresses)
-------------------------------------------------------------------



-------------------------------------------------------------------
3.40.2:
-Bug fix for proper cron.d owner permissions
-------------------------------------------------------------------



-------------------------------------------------------------------
3.41.0:
-Improved documentation
-------------------------------------------------------------------



-------------------------------------------------------------------
3.42.0:
-UX revisions
-Theme CSS consolidation
-Better matching dark theme colors
-------------------------------------------------------------------



-------------------------------------------------------------------
3.42.1:
-Auto-install bug fix
-Revised TODO
-------------------------------------------------------------------



-------------------------------------------------------------------
3.42.2:
-Bug fix for portfolio summary leverage stats
-Config setting for maximum margin leverage
-UX revisions
-Code cleanup
-------------------------------------------------------------------



-------------------------------------------------------------------
3.42.3:
-Another bug fix for portfolio summary leverage stats (newly-introduced)
-------------------------------------------------------------------



-------------------------------------------------------------------
3.42.4:
-Small bug fix for price alert volume change percentage (edge case / UX issue)
-Coding cleanup (semantics)
-Config setting to control the maximum decimals used on coins with USD values under $1 (for cleaner interface / UX)
-------------------------------------------------------------------


















